# driftcop

./: .gitignore  CLA.md  LICENSE.txt  LICENSE_HEADERS.md  LOGO_SETUP.md  README.md
mcp-sec/: .env.example  ADVANCED_FEATURES_REPORT.md  ARCHITECTURE_MERMAID.md  FEATURES.md  Makefile  PACKAGING.md  PYPI_PREFLIGHT_CHECKLIST.md  PYPI_PUBLISH_GUIDE.md  README.md  TESTING.md  TEST_RESULTS.md  UI_SIGSTORE_COMPATIBILITY.md  VULNERABILITY_TEST_REPORT.md  driftcop.sh  driftcop_proxy_main.py  full_scan_report.json  install.sh  package.py  pyproject.toml  pyproject_setuptools.toml  scan_report.json  setup.sh  test_advanced_features.py  test_functionality.py  test_guardrails.py  test_language_extractors.py  test_proxy_features.py  test_scanner.py  test_simple.py  test_simple_extractors.py  test_tree_sitter_binding.py  test_tree_sitter_debug.py  test_tree_sitter_fix.py  test_vulnerable_manifest.json
mcp-sec/examples/: .mcpsec-lock.toml  ci-verify.py  signed-manifest.json  vulnerable-manifest.json
mcp-sec/examples/test-workspace/: app.js  package.json
mcp-sec/examples/tool-definitions/: javascript_tool.js  python_tool.py
mcp-sec/src/driftcop_interceptors/: __init__.py  approval.py  audit.py  base.py  chain.py  factory.py  filter.py  logging.py  python_function.py  rate_limit.py  security.py  transform.py
mcp-sec/src/driftcop_proxy/: __init__.py  cli.py  config.py  core.py  hot_reload.py  json_stream.py  message.py  profiles.py  security_worker.py  session.py
mcp-sec/src/driftcop_storage/: __init__.py  manager.py
mcp-sec/src/mcp_sec/: __init__.py  cli.py  config.py  models.py
mcp-sec/tests/: __init__.py  conftest.py
mcp-sec/tests/integration/: __init__.py  test_cli_integration.py
(+95 files in other folders)
